--- a/requirements.txt
+++ b/requirements.txt
@@ -2,26 +2,31 @@ astroid==3.3.8
 attrs==25.1.0
 beautifulsoup4==4.12.3
 black==25.1.0
+blinker==1.9.0
 bs4==0.0.2
 certifi==2024.12.14
 cfgv==3.4.0
 charset-normalizer==3.4.1
 click==8.1.8
-contourpy==1.3.0
+contourpy==1.3.1
 cycler==0.12.1
 dill==0.3.9
 distlib==0.3.9
 dnspython==2.7.0
 exceptiongroup==1.2.2
 filelock==3.17.0
+Flask==3.1.0
 fonttools==4.55.8
 h11==0.14.0
 identify==2.6.6
 idna==3.10
 iniconfig==2.0.0
 isort==6.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.5
 joblib==1.4.2
-kiwisolver==1.4.7
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
 matplotlib==3.10.0
 mccabe==0.7.0
 mypy-extensions==1.0.0
@@ -65,4 +70,5 @@ urllib3==2.3.0
 virtualenv==20.29.1
 webdriver-manager==4.0.2
 websocket-client==1.8.0
+Werkzeug==3.1.3
 wsproto==1.2.0
