--- a/.github/workflows/pytest-ci.yml
+++ b/.github/workflows/pytest-ci.yml
@@ -15,4 +15,4 @@ jobs:
         pip install -r requirements.txt
     - name: Run tests
       run: |
-        make tests
+        pytest tests/test_minesweeper.py
